python-compiler/tests/snapshots/lib__unary__unary_negation_with_variable.snap
---
source: tests/unary.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

define i32 @main() {
entry:
  %x = alloca i64, align 8
  store i64 9221120237041090660, ptr %x, align 4
  %x1 = load i64, ptr %x, align 4
  %check_qnan = and i64 %x1, 9221120237041090560
  %is_float = icmp ne i64 %check_qnan, 9221120237041090560
  %i64_to_f64 = bitcast i64 %x1 to double
  %extract_payload = and i64 %x1, 281474976710655
  %sign_bit = lshr i64 %extract_payload, 47
  %is_negative = icmp eq i64 %sign_bit, 1
  %sign_extend = or i64 %extract_payload, -281474976710656
  %signed_payload = select i1 %is_negative, i64 %sign_extend, i64 %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float, double %i64_to_f64, double %payload_to_f64
  %neg = fsub double 0.000000e+00, %final_payload
  %check_qnan2 = and i64 %x1, 9221120237041090560
  %is_float3 = icmp ne i64 %check_qnan2, 9221120237041090560
  %tag_bits = and i64 %x1, 1970324836974592
  %tag = lshr i64 %tag_bits, 48
  %is_bool = icmp eq i64 %tag, 1
  %is_string = icmp eq i64 %tag, 2
  %is_list = icmp eq i64 %tag, 3
  %map_bool = select i1 %is_bool, i64 2, i64 %tag
  %map_string = select i1 %is_string, i64 3, i64 %map_bool
  %map_list = select i1 %is_list, i64 4, i64 %map_string
  %final_tag = select i1 %is_float3, i64 1, i64 %map_list
  %is_float_tag = icmp eq i64 %final_tag, 1
  %float_to_i64 = bitcast double %neg to i64
  %is_bool4 = icmp eq i64 %final_tag, 2
  %is_string5 = icmp eq i64 %final_tag, 3
  %is_list6 = icmp eq i64 %final_tag, 4
  %tag_temp1 = select i1 %is_bool4, i64 1, i64 0
  %tag_temp2 = select i1 %is_string5, i64 2, i64 %tag_temp1
  %internal_tag = select i1 %is_list6, i64 3, i64 %tag_temp2
  %payload_to_i64 = fptosi double %neg to i64
  %payload_masked = and i64 %payload_to_i64, 281474976710655
  %tag_shifted = shl i64 %internal_tag, 48
  %with_qnan = or i64 9221120237041090560, %tag_shifted
  %nanboxed = or i64 %with_qnan, %payload_masked
  %pyobject = select i1 %is_float_tag, i64 %float_to_i64, i64 %nanboxed
  %check_qnan7 = and i64 %pyobject, 9221120237041090560
  %is_float8 = icmp ne i64 %check_qnan7, 9221120237041090560
  %tag_bits9 = and i64 %pyobject, 1970324836974592
  %tag10 = lshr i64 %tag_bits9, 48
  %is_bool11 = icmp eq i64 %tag10, 1
  %is_string12 = icmp eq i64 %tag10, 2
  %is_list13 = icmp eq i64 %tag10, 3
  %map_bool14 = select i1 %is_bool11, i64 2, i64 %tag10
  %map_string15 = select i1 %is_string12, i64 3, i64 %map_bool14
  %map_list16 = select i1 %is_list13, i64 4, i64 %map_string15
  %final_tag17 = select i1 %is_float8, i64 1, i64 %map_list16
  %check_qnan18 = and i64 %pyobject, 9221120237041090560
  %is_float19 = icmp ne i64 %check_qnan18, 9221120237041090560
  %i64_to_f6420 = bitcast i64 %pyobject to double
  %extract_payload21 = and i64 %pyobject, 281474976710655
  %sign_bit22 = lshr i64 %extract_payload21, 47
  %is_negative23 = icmp eq i64 %sign_bit22, 1
  %sign_extend24 = or i64 %extract_payload21, -281474976710656
  %signed_payload25 = select i1 %is_negative23, i64 %sign_extend24, i64 %extract_payload21
  %payload_to_f6426 = sitofp i64 %signed_payload25 to double
  %final_payload27 = select i1 %is_float19, double %i64_to_f6420, double %payload_to_f6426
  %is_int = icmp eq i64 %final_tag17, 0
  %is_string28 = icmp eq i64 %final_tag17, 3
  br i1 %is_string28, label %print_string, label %check_int

check_int:                                        ; preds = %entry
  br i1 %is_int, label %print_int, label %print_float

print_int:                                        ; preds = %check_int
  %to_int = fptosi double %final_payload27 to i64
  %printf_int = call i32 (ptr, ...) @printf(ptr @int_format_string, i64 %to_int)
  br label %print_end

print_float:                                      ; preds = %check_int
  %printf_float = call i32 (ptr, ...) @printf(ptr @float_format_string, double %final_payload27)
  br label %print_end

print_string:                                     ; preds = %entry
  %extract_ptr_payload = and i64 %pyobject, 281474976710655
  %payload_to_ptr = inttoptr i64 %extract_ptr_payload to ptr
  %printf_string = call i32 (ptr, ...) @printf(ptr @string_format_string, ptr %payload_to_ptr)
  br label %print_end

print_end:                                        ; preds = %print_string, %print_float, %print_int
  ret i32 0
}

declare i32 @printf(ptr, ...)
